Fri Sep  4 23:33:12 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/cuts/utils/barrier:
        * examples/cuts/utils/barrier/README:
        * examples/cuts/utils/barrier/client.cutsnode.config:
        * examples/cuts/utils/barrier/controller.cutsnode.config:
        * examples/cuts/utils/barrier/environment.txt:

          . Example illustrating how to use the CUTS barrier utility
            for sychronizing process execution across mulitple nodes.

Fri Sep  4 00:17:06 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/examples/SLICE.xme:

          . Fixed model errors.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/Project_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/Project_Generator.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ciao/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/tcpip/Workspace_Generator.h:


          . Fixed errors in the project specification.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/BE_RTIDDS.mpc:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Context.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Project_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Project_Generator.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Servant_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Servant_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Workspace_Generator.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/rtidds/Workspace_Generator.inl: